--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
 
       // Your data here - update with your actual mock results
       data.addRows([
-        [new Date('2025-05-01'), 77.24, 'Mock 1', 50, 10, 10, 10, 10, 5, 5],
-        [new Date('2025-05-05'), 51.45, 'Mock 2', 50, 10, 10, 10, 10, 5, 5],
-        [new Date('2025-05-10'), 72.56, 'Mock 3', 50, 10, 10, 10, 10, 5, 5],
-        [new Date('2025-05-10'), 67.24, 'Mock 4', 50, 10, 10, 10, 10, 5, 5]
+        [new Date('2025-05-25'), 72.01, 'Mock 1', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-26'), 66.19, 'Mock 1', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-27'), 55.94, 'Mock 2', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-28'), 71.56, 'Mock 3', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-29'), 65.11, 'Mock 4', 50, 10, 10, 10, 10, 5, 5]
       ]);
 
       var options = {
@@ -82,15 +83,15 @@
       chart.draw(data, options);
       
       // Add custom legend
-      var legendHtml = '<div class="legend">';
-      legendHtml += '<span style="color: #CCCCCC;">■ Gray (0-50)</span>';
-      legendHtml += '<span style="color: #57A773;">■ Green (50-60)</span>';
-      legendHtml += '<span style="color: #4A89DC;">■ Blue (60-70)</span>';
-      legendHtml += '<span style="color: #00FFFF;">■ Cyan (70-80)</span>';
-      legendHtml += '<span style="color: #AC92EC;">■ Violet (80-90)</span>';
-      legendHtml += '<span style="color: #FFA500;">■ Orange (90-95)</span>';
-      legendHtml += '<span style="color: #ED5565;">■ Red (95-100)</span>';
-      legendHtml += '</div>';
+      // var legendHtml = '<div class="legend">';
+      // legendHtml += '<span style="color: #CCCCCC;">■ Gray (0-50)</span>';
+      // legendHtml += '<span style="color: #57A773;">■ Green (50-60)</span>';
+      // legendHtml += '<span style="color: #4A89DC;">■ Blue (60-70)</span>';
+      // legendHtml += '<span style="color: #00FFFF;">■ Cyan (70-80)</span>';
+      // legendHtml += '<span style="color: #AC92EC;">■ Violet (80-90)</span>';
+      // legendHtml += '<span style="color: #FFA500;">■ Orange (90-95)</span>';
+      // legendHtml += '<span style="color: #ED5565;">■ Red (95-100)</span>';
+      // legendHtml += '</div>';
       
       document.getElementById('chart_div').insertAdjacentHTML('afterend', legendHtml);
     }
