--- a/index.html
+++ b/index.html
@@ -48,10 +48,22 @@
       // Your data here - update with your actual mock results
       data.addRows([
         [new Date('2025-05-25'), 72.01, 'Mock 1', 50, 10, 10, 10, 10, 5, 5],
-        [new Date('2025-05-26'), 66.19, 'Mock 1', 50, 10, 10, 10, 10, 5, 5],
-        [new Date('2025-05-27'), 55.94, 'Mock 2', 50, 10, 10, 10, 10, 5, 5],
-        [new Date('2025-05-28'), 71.56, 'Mock 3', 50, 10, 10, 10, 10, 5, 5],
-        [new Date('2025-05-29'), 65.11, 'Mock 4', 50, 10, 10, 10, 10, 5, 5]
+        [new Date('2025-05-26'), 66.19, 'Mock 2', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-27'), 55.94, 'Mock 3', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-28'), 71.56, 'Mock 4', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-29'), 65.11, 'Mock 5', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-30'), 44.3, 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-31'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-06-1'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-06-2'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
+         [new Date('2025-06-3'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
+         [new Date('2025-06-4'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
+         [new Date('2025-06-5'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
+         [new Date('2025-06-6'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
+         [new Date('2025-06-7'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
+         [new Date('2025-06-8'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
+         [new Date('2025-06-9'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
+      
       ]);
 
       var options = {
