--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         [new Date('2025-05-28'), 71.56, 'Mock 4', 50, 10, 10, 10, 10, 5, 5],
         [new Date('2025-05-29'), 65.11, 'Mock 5', 50, 10, 10, 10, 10, 5, 5],
         [new Date('2025-05-30'), 44.3, 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
-        [new Date('2025-05-31'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-31'), 29.04, 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
         [new Date('2025-06-1'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
         [new Date('2025-06-2'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
          [new Date('2025-06-3'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
