--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         [new Date('2025-05-30'), 44.3, 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
         [new Date('2025-05-31'), 29.04, 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
         [new Date('2025-06-1'), 52.27, 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
-        [new Date('2025-06-2'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-06-2'), 41.66 , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
          [new Date('2025-06-3'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
          [new Date('2025-06-4'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
          [new Date('2025-06-5'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
