--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </style>
 </head>
 <body>
-  <h1 style="text-align: center;">SSC CGL Mock Performance</h1>
+  <h1 style="text-align: center;">./././././rainboy </h1>
   <div id="chart_div"></div>
   
   <script>
