--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         [new Date('2025-06-2'), 41.66 , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
          [new Date('2025-06-3'), 38.86, 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
          [new Date('2025-06-4'), 28.01, 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
-         [new Date('2025-06-5'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
+         [new Date('2025-06-5'), 22.54, 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
          [new Date('2025-06-6'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
          [new Date('2025-06-7'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
          [new Date('2025-06-8'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
