--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
 
       // Your data here - update with your actual mock results
       data.addRows([
-        [new Date('2025-05-25'), 72.01, 'Mock 1', 50, 10, 10, 10, 10, 5, 5],
-        [new Date('2025-05-26'), 66.19, 'Mock 2', 50, 10, 10, 10, 10, 5, 5],
-        [new Date('2025-05-27'), 55.94, 'Mock 3', 50, 10, 10, 10, 10, 5, 5],
-        [new Date('2025-05-28'), 71.56, 'Mock 4', 50, 10, 10, 10, 10, 5, 5],
-        [new Date('2025-05-29'), 65.11, 'Mock 5', 50, 10, 10, 10, 10, 5, 5],
-        [new Date('2025-05-30'), 44.3, 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
-        [new Date('2025-05-31'), 29.04, 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
-        [new Date('2025-06-1'), 52.27, 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
-        [new Date('2025-06-2'), 41.66 , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
-         [new Date('2025-06-3'), 38.86, 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
-         [new Date('2025-06-4'), 28.01, 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
-         [new Date('2025-06-5'), 22.54, 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
-         [new Date('2025-06-6'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
-         [new Date('2025-06-7'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
-         [new Date('2025-06-8'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
-         [new Date('2025-06-9'), , 'Mock 6', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-25'), 72.01, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-26'), 66.19, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-27'), 55.94, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-28'), 71.56, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-29'), 65.11, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-30'), 44.3, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-31'), 29.04, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-06-1'), 52.27, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-06-2'), 41.66 , '', 50, 10, 10, 10, 10, 5, 5],
+         [new Date('2025-06-3'), 38.86, '', 50, 10, 10, 10, 10, 5, 5],
+         [new Date('2025-06-4'), 28.01, '', 50, 10, 10, 10, 10, 5, 5],
+         [new Date('2025-06-5'), 22.54, '', 50, 10, 10, 10, 10, 5, 5],
+         [new Date('2025-06-6'), , '', 50, 10, 10, 10, 10, 5, 5],
+         [new Date('2025-06-7'), , '', 50, 10, 10, 10, 10, 5, 5],
+         [new Date('2025-06-8'), , '', 50, 10, 10, 10, 10, 5, 5],
+         [new Date('2025-06-9'), , '', 50, 10, 10, 10, 10, 5, 5],
       
       ]);
 
