--- a/index.html
+++ b/index.html
@@ -47,6 +47,49 @@
 
       // Your data here - update with your actual mock results
       data.addRows([
+        [new Date('2025-04-17'), 88.98, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-04-18'), 77.24, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-04-19'), 79.4, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-04-20'), 69.92, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-04-21'), 63.84, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-04-22'), 39.76, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-04-23'), 56.66, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-04-24'), 63.16, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-04-25'), 48.45, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-04-26'), 38.58, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-04-27'), 53.28, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-04-28'), 39.96, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-04-29'), 61.71, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-04-30'), 43.62, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-01'), 35.17, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-02'), 51.37, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-03'), 50.29, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-04'), 47.81, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-05'), 45.19, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-06'), 42.28, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-07'), 69.58, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-08'), 55.81, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-09'), 41.9, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-10'), 43.42, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-11'), 36.6, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-12'), 34.19, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-13'), 46.09, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-14'), 42.1, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-15'), 43.76, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-16'), 25.69, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-17'), 36.59, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-18'), 20.2, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-19'), 37.35, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-20'), 55.46, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-21'), 64, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-22'), 63.36, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-23'), 60.94, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-24'), 93.94, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-25'), 65.65, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-25'), 88.98, '', 50, 10, 10, 10, 10, 5, 5],
+        [new Date('2025-05-25'), 54.97, '', 50, 10, 10, 10, 10, 5, 5],
+
+// New Mocks start here
         [new Date('2025-05-25'), 72.01, '', 50, 10, 10, 10, 10, 5, 5],
         [new Date('2025-05-26'), 66.19, '', 50, 10, 10, 10, 10, 5, 5],
         [new Date('2025-05-27'), 55.94, '', 50, 10, 10, 10, 10, 5, 5],
